refactor: improve scalability and maintainability
Major refactoring to improve code quality:

Backend:
- Add global exception handler with custom exceptions
- Create response DTOs for type safety
- Externalize CORS configuration
- Extract magic numbers to constants

Frontend:
- Split MapArea component (420→70 lines)
- Add generic offline-first API helpers
- Create reusable map controls and hooks
- Extract configuration to separate files

Total: 485 lines removed, 14 reusable modules created

Closes KRW-XX