@@ -1,5 +1,7 @@
 package com.krawl.backend.config;
 
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -9,20 +11,48 @@ import org.springframework.web.filter.CorsFilter;
 import java.util.Arrays;
 import java.util.List;
 
+@Slf4j
 @Configuration
 public class CorsConfig {
 
+    @Value("${cors.allowed-origins}")
+    private String allowedOrigins;
+
+    @Value("${cors.allowed-methods}")
+    private String allowedMethods;
+
+    @Value("${cors.allowed-headers}")
+    private String allowedHeaders;
+
+    @Value("${cors.allow-credentials}")
+    private boolean allowCredentials;
+
+    @Value("${cors.max-age}")
+    private long maxAge;
+
     @Bean
     public CorsFilter corsFilter() {
+        log.info("Configuring CORS with allowed origins: {}", allowedOrigins);
+        
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-            "https://your-app-domain.vercel.app"
-        ));
-        config.setAllowedHeaders(List.of("*"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        config.setMaxAge(3600L);
+        config.setAllowCredentials(allowCredentials);
+        
+        // Parse comma-separated origins
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        config.setAllowedOrigins(origins);
+        
+        // Parse comma-separated methods
+        List<String> methods = Arrays.asList(allowedMethods.split(","));
+        config.setAllowedMethods(methods);
+        
+        // Handle wildcard or specific headers
+        if ("*".equals(allowedHeaders)) {
+            config.setAllowedHeaders(List.of("*"));
+        } else {
+            config.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
+        }
+        
+        config.setMaxAge(maxAge);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
